// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Terminal formatter snapshots renders Claude healthy 1`] = `
"┏━ Claude ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┣━ ◆ 5-hour limit (shared)
┃  ● All Models           ███████████████░░░░░  75% → __HM__ (__:__)
┃
┣━ ◆ Weekly limit (shared)
┃  ● All Models           ██████████████████░░  90% → __HM__ (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Terminal formatter snapshots renders Claude error 1`] = `
"┏━ Claude ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┃  ⚠️ Token expired. Open \`agent-bar menu\` and choose Provider login.
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Terminal formatter snapshots renders Codex healthy 1`] = `
"┏━ Codex ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┃  Plan: Pro
┃
┣━ ◆ 5-hour limit
┃  ● Codex                ████████████░░░░░░░░  60% → __HM__ (__:__)
┃
┣━ ◆ 7-day limit
┃  ● Codex                █████████████████░░░  85% → __HM__ (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Terminal formatter snapshots renders Codex error 1`] = `
"┏━ Codex ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┃  ⚠️ No session data found
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Terminal formatter snapshots renders Amp healthy 1`] = `
"┏━ Amp ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┣━ ◆ Free Tier
┃  ● ██████████████░░░░░░  70%
┃  ├─ +$0.25/hr  ( $3.50 / $5.00 )
┃  └─ Full in __HM__  (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Terminal formatter snapshots renders Amp error 1`] = `
"┏━ Amp ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┃  ⚠️ Amp CLI not installed. Right-click to install and log in.
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Terminal formatter snapshots renders all providers combined 1`] = `
"┏━ Claude ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┣━ ◆ 5-hour limit (shared)
┃  ● All Models           ███████████████░░░░░  75% → __HM__ (__:__)
┃
┣━ ◆ Weekly limit (shared)
┃  ● All Models           ██████████████████░░  90% → __HM__ (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

┏━ Codex ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┃  Plan: Pro
┃
┣━ ◆ 5-hour limit
┃  ● Codex                ████████████░░░░░░░░  60% → __HM__ (__:__)
┃
┣━ ◆ 7-day limit
┃  ● Codex                █████████████████░░░  85% → __HM__ (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

┏━ Amp ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┣━ ◆ Free Tier
┃  ● ██████████████░░░░░░  70%
┃  ├─ +$0.25/hr  ( $3.50 / $5.00 )
┃  └─ Full in __HM__  (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Terminal formatter snapshots renders empty providers 1`] = `"No providers connected"`;

exports[`Waybar formatter snapshots renders Claude healthy 1`] = `"<span foreground='#98c379'>75%</span>"`;

exports[`Waybar formatter snapshots renders Claude healthy 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude · Pro</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ 5-hour limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>███████████████</span><span foreground='#6a7485'>░░░░░</span> <span foreground='#98c379'> 75%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ Weekly limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>██████████████████</span><span foreground='#6a7485'>░░</span> <span foreground='#98c379'> 90%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots renders Claude healthy 3`] = `"agent-bar claude-ok"`;

exports[`Waybar formatter snapshots renders Claude error 1`] = `"<span foreground='#6a7485'>No Providers</span>"`;

exports[`Waybar formatter snapshots renders Claude error 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#e06c75'>⚠️ Token expired. Open \`agent-bar menu\` and choose Provider login.</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots renders Claude error 3`] = `"agent-bar"`;

exports[`Waybar formatter snapshots renders Codex healthy 1`] = `"<span foreground='#98c379'>60%</span>"`;

exports[`Waybar formatter snapshots renders Codex healthy 2`] = `
"<span foreground='#98c379'>┏━</span> <span foreground='#98c379' weight='bold'>Codex · Pro</span> <span foreground='#98c379'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 5-hour limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>████████████</span><span foreground='#6a7485'>░░░░░░░░</span> <span foreground='#98c379'> 60%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 7-day limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>█████████████████</span><span foreground='#6a7485'>░░░</span> <span foreground='#98c379'> 85%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┗━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#98c379'>━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots renders Codex healthy 3`] = `"agent-bar codex-ok"`;

exports[`Waybar formatter snapshots renders Amp healthy 1`] = `"<span foreground='#98c379'>70%</span>"`;

exports[`Waybar formatter snapshots renders Amp healthy 2`] = `
"<span foreground='#c678dd'>┏━</span> <span foreground='#c678dd' weight='bold'>Amp</span> <span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┣━</span> <span foreground='#c678dd' weight='bold'>◆ Free Tier</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#98c379'>██████████████</span><span foreground='#6a7485'>░░░░░░</span> <span foreground='#98c379'> 70%</span>  <span foreground='#56b6c2'>→ Full in __HM__ (__:__)</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#6a7485'>○</span> <span foreground='#56b6c2'>+$0.25/hr</span><span foreground='#6a7485'>  |  </span><span foreground='#c0c9d4'>$3.50 / $5.00</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┗━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots renders Amp healthy 3`] = `"agent-bar amp-ok"`;

exports[`Waybar formatter snapshots renders all providers combined 1`] = `"<span foreground='#98c379'>75%</span> <span foreground='#6a7485'>│</span> <span foreground='#98c379'>60%</span> <span foreground='#6a7485'>│</span> <span foreground='#98c379'>70%</span>"`;

exports[`Waybar formatter snapshots renders all providers combined 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude · Pro</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ 5-hour limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>███████████████</span><span foreground='#6a7485'>░░░░░</span> <span foreground='#98c379'> 75%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ Weekly limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>██████████████████</span><span foreground='#6a7485'>░░</span> <span foreground='#98c379'> 90%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━</span>

<span foreground='#98c379'>┏━</span> <span foreground='#98c379' weight='bold'>Codex · Pro</span> <span foreground='#98c379'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 5-hour limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>████████████</span><span foreground='#6a7485'>░░░░░░░░</span> <span foreground='#98c379'> 60%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 7-day limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>█████████████████</span><span foreground='#6a7485'>░░░</span> <span foreground='#98c379'> 85%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┗━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#98c379'>━━━━━━━━━━━━━━━━━━</span>

<span foreground='#c678dd'>┏━</span> <span foreground='#c678dd' weight='bold'>Amp</span> <span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┣━</span> <span foreground='#c678dd' weight='bold'>◆ Free Tier</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#98c379'>██████████████</span><span foreground='#6a7485'>░░░░░░</span> <span foreground='#98c379'> 70%</span>  <span foreground='#56b6c2'>→ Full in __HM__ (__:__)</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#6a7485'>○</span> <span foreground='#56b6c2'>+$0.25/hr</span><span foreground='#6a7485'>  |  </span><span foreground='#c0c9d4'>$3.50 / $5.00</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┗━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots renders all providers combined 3`] = `"agent-bar claude-ok codex-ok amp-ok"`;

exports[`Waybar formatter snapshots renders empty providers 1`] = `"<span foreground='#6a7485'>No Providers</span>"`;

exports[`Waybar formatter snapshots renders empty providers 2`] = `""`;

exports[`Waybar formatter snapshots renders empty providers 3`] = `"agent-bar"`;

exports[`formatProviderForWaybar snapshots renders Claude healthy 1`] = `"<span foreground='#98c379'>75%</span>"`;

exports[`formatProviderForWaybar snapshots renders Claude healthy 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude · Pro</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ 5-hour limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>███████████████</span><span foreground='#6a7485'>░░░░░</span> <span foreground='#98c379'> 75%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ Weekly limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>██████████████████</span><span foreground='#6a7485'>░░</span> <span foreground='#98c379'> 90%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`formatProviderForWaybar snapshots renders Claude healthy 3`] = `"agent-bar-claude ok"`;

exports[`formatProviderForWaybar snapshots renders Claude disconnected 1`] = `"<span foreground='#e06c75'>󱘖</span>"`;

exports[`formatProviderForWaybar snapshots renders Claude disconnected 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#e06c75'>⚠️ Token expired. Open \`agent-bar menu\` and choose Provider login.</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`formatProviderForWaybar snapshots renders Claude disconnected 3`] = `"agent-bar-claude disconnected"`;

exports[`formatProviderForWaybar snapshots renders Codex healthy 1`] = `"<span foreground='#98c379'>60%</span>"`;

exports[`formatProviderForWaybar snapshots renders Codex healthy 2`] = `
"<span foreground='#98c379'>┏━</span> <span foreground='#98c379' weight='bold'>Codex · Pro</span> <span foreground='#98c379'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 5-hour limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>████████████</span><span foreground='#6a7485'>░░░░░░░░</span> <span foreground='#98c379'> 60%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 7-day limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>█████████████████</span><span foreground='#6a7485'>░░░</span> <span foreground='#98c379'> 85%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`formatProviderForWaybar snapshots renders Codex healthy 3`] = `"agent-bar-codex ok"`;

exports[`formatProviderForWaybar snapshots renders Amp healthy 1`] = `"<span foreground='#98c379'>70%</span>"`;

exports[`formatProviderForWaybar snapshots renders Amp healthy 2`] = `
"<span foreground='#c678dd'>┏━</span> <span foreground='#c678dd' weight='bold'>Amp</span> <span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┣━</span> <span foreground='#c678dd' weight='bold'>◆ Free Tier</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#98c379'>██████████████</span><span foreground='#6a7485'>░░░░░░</span> <span foreground='#98c379'> 70%</span>  <span foreground='#56b6c2'>→ Full in __HM__ (__:__)</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#6a7485'>○</span> <span foreground='#56b6c2'>+$0.25/hr</span><span foreground='#6a7485'>  |  </span><span foreground='#c0c9d4'>$3.50 / $5.00</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`formatProviderForWaybar snapshots renders Amp healthy 3`] = `"agent-bar-amp ok"`;

exports[`Terminal formatter snapshots — displayMode=used renders Claude healthy as used 1`] = `
"┏━ Claude ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┣━ ◆ 5-hour limit (shared)
┃  ● All Models           █████░░░░░░░░░░░░░░░  25% → __HM__ (__:__)
┃
┣━ ◆ Weekly limit (shared)
┃  ● All Models           ██░░░░░░░░░░░░░░░░░░  10% → __HM__ (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Terminal formatter snapshots — displayMode=used renders Codex healthy as used 1`] = `
"┏━ Codex ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┃  Plan: Pro
┃
┣━ ◆ 5-hour limit
┃  ● Codex                ████████░░░░░░░░░░░░  40% → __HM__ (__:__)
┃
┣━ ◆ 7-day limit
┃  ● Codex                ███░░░░░░░░░░░░░░░░░  15% → __HM__ (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Terminal formatter snapshots — displayMode=used renders Amp healthy as used 1`] = `
"┏━ Amp ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┣━ ◆ Free Tier
┃  ● ██████░░░░░░░░░░░░░░  30%
┃  ├─ +$0.25/hr  ( $3.50 / $5.00 )
┃  └─ Resets in __HM__  (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Terminal formatter snapshots — displayMode=used renders all providers combined as used 1`] = `
"┏━ Claude ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┣━ ◆ 5-hour limit (shared)
┃  ● All Models           █████░░░░░░░░░░░░░░░  25% → __HM__ (__:__)
┃
┣━ ◆ Weekly limit (shared)
┃  ● All Models           ██░░░░░░░░░░░░░░░░░░  10% → __HM__ (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

┏━ Codex ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┃  Plan: Pro
┃
┣━ ◆ 5-hour limit
┃  ● Codex                ████████░░░░░░░░░░░░  40% → __HM__ (__:__)
┃
┣━ ◆ 7-day limit
┃  ● Codex                ███░░░░░░░░░░░░░░░░░  15% → __HM__ (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

┏━ Amp ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
┃
┣━ ◆ Free Tier
┃  ● ██████░░░░░░░░░░░░░░  30%
┃  ├─ +$0.25/hr  ( $3.50 / $5.00 )
┃  └─ Resets in __HM__  (__:__)
┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
`;

exports[`Waybar formatter snapshots — displayMode=used renders Claude healthy as used 1`] = `"<span foreground='#98c379'>25%</span>"`;

exports[`Waybar formatter snapshots — displayMode=used renders Claude healthy as used 2`] = `
"<span foreground='#d19a66'>┏━</span> <span foreground='#d19a66' weight='bold'>Claude · Pro</span> <span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ 5-hour limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>█████</span><span foreground='#6a7485'>░░░░░░░░░░░░░░░</span> <span foreground='#98c379'> 25%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┣━</span> <span foreground='#d19a66' weight='bold'>◆ Weekly limit (shared)</span>
<span foreground='#d19a66'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>All Models          </span> <span foreground='#98c379'>██</span><span foreground='#6a7485'>░░░░░░░░░░░░░░░░░░</span> <span foreground='#98c379'> 10%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#d19a66'>┃</span>
<span foreground='#d19a66'>┗━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#d19a66'>━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots — displayMode=used renders Claude healthy as used 3`] = `"agent-bar claude-ok"`;

exports[`Waybar formatter snapshots — displayMode=used renders Codex healthy as used 1`] = `"<span foreground='#98c379'>40%</span>"`;

exports[`Waybar formatter snapshots — displayMode=used renders Codex healthy as used 2`] = `
"<span foreground='#98c379'>┏━</span> <span foreground='#98c379' weight='bold'>Codex · Pro</span> <span foreground='#98c379'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 5-hour limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>████████</span><span foreground='#6a7485'>░░░░░░░░░░░░</span> <span foreground='#98c379'> 40%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┣━</span> <span foreground='#98c379' weight='bold'>◆ 7-day limit</span>
<span foreground='#98c379'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#e2e8f0'>Codex               </span> <span foreground='#98c379'>███</span><span foreground='#6a7485'>░░░░░░░░░░░░░░░░░</span> <span foreground='#98c379'> 15%</span> <span foreground='#56b6c2'>→ __HM__ (__:__)</span>
<span foreground='#98c379'>┃</span>
<span foreground='#98c379'>┗━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#98c379'>━━━━━━━━━━━━━━━━━━</span>"
`;

exports[`Waybar formatter snapshots — displayMode=used renders Codex healthy as used 3`] = `"agent-bar codex-ok"`;

exports[`Waybar formatter snapshots — displayMode=used renders Amp healthy as used (tooltip contains "Resets in") 1`] = `"<span foreground='#98c379'>30%</span>"`;

exports[`Waybar formatter snapshots — displayMode=used renders Amp healthy as used (tooltip contains "Resets in") 2`] = `
"<span foreground='#c678dd'>┏━</span> <span foreground='#c678dd' weight='bold'>Amp</span> <span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┣━</span> <span foreground='#c678dd' weight='bold'>◆ Free Tier</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#98c379'>●</span> <span foreground='#98c379'>██████</span><span foreground='#6a7485'>░░░░░░░░░░░░░░</span> <span foreground='#98c379'> 30%</span>  <span foreground='#56b6c2'>→ Resets in __HM__ (__:__)</span>
<span foreground='#c678dd'>┃</span>  <span foreground='#6a7485'>○</span> <span foreground='#56b6c2'>+$0.25/hr</span><span foreground='#6a7485'>  |  </span><span foreground='#c0c9d4'>$3.50 / $5.00</span>
<span foreground='#c678dd'>┃</span>
<span foreground='#c678dd'>┗━━━━━━━━━━━━━━━━━</span><span foreground='#6a7485'> cached · __AGO__ </span><span foreground='#c678dd'>━━━━━━━━━━━━━━━━━━</span>"
`;
